v3.0.1/docs/index.md
# Documentation

> The projectious.work brand and design system — foundations, logo, interface patterns, collateral, and usage terms.


{{% callout type="info" title="About this documentation" %}}
This documentation is rendered by the design system it describes. Every colour
chip, type row, and code block on this site is produced from the same tokens the
pages document.
{{% /callout %}}

The current contract is synchronized from design system **v2.1.1**. It applies
to every brand surface: product UI, marketing, documentation, slides, email,
terminal output, and portfolio material. The rendered UI mockups supplied with
the system's preview cards, UI kits, and slides are the visual reference when
prose could be read more than one way.

## Brand in one view

- **Name:** projectious.work — always lowercase; the dot is part of the name.
- **Positioning:** Cloud · Agile · Agentic AI — agent-first consulting.
- **Tagline:** Redesigning work.
- **Mission:** Augment people's strengths to improve life for everyone.
- **Vision:** Humanistic ideals determine actions in an AI-completed world.
- **Voice:** modern, composable, authentic, no-nonsense, agent-first, and
  humanistic.
- **Audience:** technical leaders at European and international organisations
  adopting AI-native workflows.

The four convictions behind the system are: do more with more; specialized
beats generic now; remain provider-independent; and run what we recommend.

## Writing the brand

Write like an honest principal engineer who has stopped trying to impress:
direct, technical, humanistic, and restrained. Use plain words, short to medium
sentences, and a confident claim instead of loud punctuation or marketing
language. Treat agents as a normal part of good work rather than something to
gush about.

- Use sentence case except for proper nouns.
- Use **we** for projectious.work and **you** for the reader; never *I* or
  *the team*.
- Address the reader's situation, not their feelings.
- Join the practices with a middle dot: **Cloud · Agile · Agentic AI**, never
  an ampersand.
- Use the middle dot for compact metadata too, and use spaced em dashes
  sparingly for asides.
- Do not use emoji on a brand surface.
- Use digits in technical contexts. In prose, spell out one through nine unless
  the number has a unit.

Stock lines, in priority order, are **Cloud · Agile · Agentic AI**,
**Redesigning work**, and **Agent-first consulting, built on what we teach**.

{{< demo label="Stock lines — use in this priority order" variant="stack" >}}
<div style="display:grid;gap:1rem">
  <div>
    <strong style="font-family:var(--font-heading);font-size:1.5rem">
      Cloud · Agile · Agentic AI
    </strong>
    <span class="pj-cap">Primary positioning line</span>
  </div>
  <div>
    <strong style="font-family:var(--font-heading);font-size:1.25rem">
      Redesigning work
    </strong>
    <span class="pj-cap">Alternative campaign line</span>
  </div>
  <div>
    <strong style="font-family:var(--font-heading);font-size:1rem">
      Agent-first consulting, built on what we teach
    </strong>
    <span class="pj-cap">Long-form descriptor</span>
  </div>
</div>
{{< /demo >}}

## Where to start

| If you want to… | Read |
|---|---|
| Use the palette correctly across all appearances | [Colour](/docs/foundations/color/) |
| Set text in the brand's voice | [Typography](/docs/foundations/typography/) |
| Place the logo without breaking it | [Logo usage](/docs/logo/usage/) |
| Build an interface | [Interface](/docs/interface/) |
| Produce a deck, signature, or social card | [Collateral](/docs/collateral/) |
| Know what you are allowed to reuse | [Governance](/docs/governance/) |
| Pull the raw values into a project | [Tokens](/docs/tokens/) |
| See what the system includes | [Features](/docs/features/) |
| Implement it in a product | [Developer guide](/docs/developer-guide/) |
| Synchronize or release it | [Maintenance](/docs/maintenance/) |
| Review shipped dependencies | [SBOM](/docs/sbom/) |

## How the system is organised

**Foundations** are the primitives — colour, type, spacing, shape, motion.
Everything else composes from them.

**Logo** covers the mark, the four lockups, and the rules that keep them legible.

**Interface** applies the foundations to screens: components, code surfaces,
appearances, icons, and forms.

**Collateral** covers the artefacts that leave the product — decks, cards,
signatures, social imagery.

**Governance** covers licensing, trademark, the pre-launch legal assessment, and
asset provenance.

## Source of truth

This site is the authoritative readable presentation of the supplied
projectious.work design system. Values originate in the synchronized token
sheet and `src/data/brand.yaml`; rendered specimens and mockups provide the
visual acceptance reference. Code and tokens are MIT-licensed. The name,
wordmark, and logo remain reserved brand marks.


- [Features](https://projectious-work.github.io/brand/v3.0.1/docs/features/index.md) — What the projectious.work design system provides to writers, designers, developers, and agents.
- [Foundations](https://projectious-work.github.io/brand/v3.0.1/docs/foundations/index.md) — The primitives — colour, typography, spacing, shape, and motion. Everything else composes from these.
- [Logo](https://projectious-work.github.io/brand/v3.0.1/docs/logo/index.md) — The mark, the four lockups, and the rules that keep them legible.
- [Interface](https://projectious-work.github.io/brand/v3.0.1/docs/interface/index.md) — The foundations applied to screens — components, code surfaces, appearances, icons, and forms.
- [Portfolio](https://projectious-work.github.io/brand/v3.0.1/docs/portfolio/index.md) — Truthful status, social-preview, diagram, and demo patterns.
- [Media](https://projectious-work.github.io/brand/v3.0.1/docs/media/index.md) — Motion, audio, video, photography, and presentation guidance.
- [Collateral](https://projectious-work.github.io/brand/v3.0.1/docs/collateral/index.md) — Artefacts that leave the product — cards, signatures, and social imagery.
- [Governance](https://projectious-work.github.io/brand/v3.0.1/docs/governance/index.md) — Licensing, trademark, the pre-launch legal assessment, and per-asset provenance.
- [Implementations](https://projectious-work.github.io/brand/v3.0.1/docs/themes/index.md) — Reference implementations for product shells, documentation, terminals, and portable brand surfaces.
- [Tokens](https://projectious-work.github.io/brand/v3.0.1/docs/tokens/index.md) — Canonical design values, generated exports, appearance selectors, and consumption rules.
- [AI consumption](https://projectious-work.github.io/brand/v3.0.1/docs/ai/index.md) — A versioned map from brand use cases to their normative documentation and generated machine-readable material.
- [Developer guide](https://projectious-work.github.io/brand/v3.0.1/docs/developer-guide/index.md) — Implement the projectious.work design system with semantic tokens, documented patterns, and reproducible checks.
- [Maintenance](https://projectious-work.github.io/brand/v3.0.1/docs/maintenance/index.md) — Synchronize, audit, release, and recover the projectious.work design system without drift.
- [SBOM and dependencies](https://projectious-work.github.io/brand/v3.0.1/docs/sbom/index.md) — Supply-chain scope, licences, and maintenance obligations for the projectious.work design system.
